# docs/user/user_swagger.json
@@ -42,13 +42,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "none"
+                            "$ref": "#/definitions/common.ErrResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "none"
+                            "$ref": "#/definitions/common.ErrResponse"
                         }
                     }
                 }
@@ -83,19 +83,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "none"
+                            "$ref": "#/definitions/common.ErrResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "none"
+                            "$ref": "#/definitions/common.ErrResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "none"
+                            "$ref": "#/definitions/common.ErrResponse"
                         }
                     }
                 }
@@ -103,6 +103,14 @@
         }
     },
     "definitions": {
+        "common.ErrResponse": {
+            "type": "object",
+            "properties": {
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
         "user.CreateUserRequest": {
             "type": "object",
             "required": [
