# pkg/match/http_api.go
@@ -16,9 +16,9 @@ import (
 // @Produce json
 // @param Authorization header string true "channel authorization"
 // @Success 200 {none} nil
-// @Failure 401 {none} nil
-// @Failure 404 {none} nil
-// @Failure 500 {none} nil
+// @Failure 401 {object} common.ErrResponse
+// @Failure 404 {object} common.ErrResponse
+// @Failure 500 {object} common.ErrResponse
 // @Router /match/forwardauth [get]
 func (r *HttpServer) ForwardAuth(c *gin.Context) {
 	channelID, ok := c.Request.Context().Value(common.ChannelKey).(uint64)
@@ -35,9 +35,9 @@ func (r *HttpServer) ForwardAuth(c *gin.Context) {
 // @Tags match
 // @Produce json
 // @Param uid query int true "self user id"
-// @Failure 400 {none} nil
-// @Failure 404 {none} nil
-// @Failure 500 {none} nil
+// @Failure 400 {object} common.ErrResponse
+// @Failure 404 {object} common.ErrResponse
+// @Failure 500 {object} common.ErrResponse
 // @Router /match [get]
 func (r *HttpServer) Match(c *gin.Context) {
 	uid := c.Query("uid")
